[metadata]
name = adblockeval
version = 0.2
home-page = https://github.com/hprid/adblockeval
license = MIT
license-file = LICENSE
author = Henning Pridöhl
author-email = henning.pridoehl@hprid.de
description = Evaluates URLs against AdBlock rules efficiently to check which rules would block them, if any.
platform = any
keywords = adblock
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
packages = adblockeval
test_suite = tests
setup_requires = setuptools

[bdist_wheel]
universal = false
